--- a/Roeivereniging/View/AddBoatPage.xaml
+++ b/Roeivereniging/View/AddBoatPage.xaml
@@ -33,16 +33,21 @@
             <Label x:Name="label4" Content="Stuur" Grid.Column="0" HorizontalAlignment="Right" Margin="0,0,5,0" Grid.Row="7" VerticalAlignment="Center" FontSize="18"/>
             <Label x:Name="label5" Content="Boot Toevoegen" Grid.Column="0" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" FontSize="24" Grid.ColumnSpan="2"/>
             <TextBox x:Name="tbName" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="3" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" FontSize="18"/>
-            <TextBox x:Name="tbUserName" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" FontSize="18"/>
-            <TextBox x:Name="tbPassWord" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" FontSize="18"/>
-            <Button x:Name="Add_Member_Button" Content="Toevoegen" Grid.Column="0" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="8" VerticalAlignment="Center" Grid.ColumnSpan="2" FontSize="24"/>
-            <ComboBox x:Name="comboBox" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="6" VerticalAlignment="Center" Width="120" FontSize="18">
+            <TextBox x:Name="tbCapacity" PreviewTextInput="PreviewTextInput" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" FontSize="18"/>
+            <Button x:Name="Add_Boat_Button" Content="Toevoegen" Grid.Column="0" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="8" VerticalAlignment="Center" Grid.ColumnSpan="2" FontSize="24" Click="Add_Boat_Button_Click"/>
+            <ComboBox x:Name="cbSculling" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="6" VerticalAlignment="Center" Width="120" FontSize="18">
                 <ComboBoxItem Content="Scullen"/>
                 <ComboBoxItem Content="Boord roeien"/>
             </ComboBox>
-            <ComboBox x:Name="comboBox1" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="7" VerticalAlignment="Center" Width="120" FontSize="18">
+            <ComboBox x:Name="cbSteering" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="7" VerticalAlignment="Center" Width="120" FontSize="18">
                 <ComboBoxItem Content="Ja"/>
                 <ComboBoxItem Content="Nee"/>
+            </ComboBox>
+            <ComboBox x:Name="cbType" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="4" VerticalAlignment="Center" Width="120" FontSize="18">
+                <ComboBoxItem Content="A-Boot"/>
+                <ComboBoxItem Content="B-Boot"/>
+                <ComboBoxItem Content="C-Boot"/>
+                <ComboBoxItem Content="Wherry"/>
             </ComboBox>
         </Grid>
 
