--- a/Roeivereniging/View/ReservePage.xaml
+++ b/Roeivereniging/View/ReservePage.xaml
@@ -130,16 +130,15 @@
             <ListView  x:Name="LbBoats" d:ItemsSource="{d:SampleData ItemCount=50} " FontSize="16">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="Type" Width="50" DisplayMemberBinding="{Binding type}" />
-                        <GridViewColumn Header="Naam" Width="120" DisplayMemberBinding="{Binding name}" />
-                        <GridViewColumn Header="Stuur" Width="150" DisplayMemberBinding="{Binding steer}" />
-                        <GridViewColumn Header="Scullen" Width="150" DisplayMemberBinding="{Binding sculling}" />
-                        <!--<GridViewColumn Header="Mail" Width="150" DisplayMemberBinding="{Binding Mail}" />-->
+                        <GridViewColumn Header="Type" Width="auto" DisplayMemberBinding="{Binding type}" />
+                        <GridViewColumn Header="Naam" Width="150" DisplayMemberBinding="{Binding name}" />
+                        <GridViewColumn Header="Stuur" Width="50" DisplayMemberBinding="{Binding steer}" />
+                        <GridViewColumn Header="Scullen" Width="50" DisplayMemberBinding="{Binding sculling}" />
                     </GridView>
                 </ListView.View>
             </ListView>
         </Grid>
-        <Label Grid.Column="0" Content="Selecteer een type:" HorizontalAlignment="Left" Margin="15,25,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label Grid.Column="1" Content="Selecteer een boot:" HorizontalAlignment="Left" Margin="15,25,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label Grid.Column="0" Grid.Row="0" Content="Filters" HorizontalAlignment="Left" Margin="20,30,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label Grid.Column="1" Content="Selecteer een boot:" HorizontalAlignment="Left" Margin="20,30,0,0" VerticalAlignment="Top" FontSize="24"/>
     </Grid>
 </Page>
