--- a/Roeivereniging/View/Account/ChangePasswordPage.xaml
+++ b/Roeivereniging/View/Account/ChangePasswordPage.xaml
@@ -16,6 +16,7 @@
             <local:TextboxWithPlaceholder x:Name="TbNew" PlaceholderText="Nieuw wachtwoord" Margin="0,5,0,0" VerticalAlignment="Top" Width="170"></local:TextboxWithPlaceholder>
             <local:TextboxWithPlaceholder x:Name="TbNewRepeat" PlaceholderText="Herhaling nieuw wachtwoord" Margin="0,5,0,0" VerticalAlignment="Top" Width="170"></local:TextboxWithPlaceholder>
             <Button x:Name="BtnChange" Content="Verander" Margin="0,5,0,0" Height="18" Click="BtnChange_Click"></Button>
+            <Label x:Name="LbWarning" Content="Label" Visibility="Hidden" Foreground="Red"/>
         </StackPanel>
 
     </Grid>
