--- a/Roeivereniging/View/Admin/DeleteBoatPage.xaml
+++ b/Roeivereniging/View/Admin/DeleteBoatPage.xaml
@@ -1,12 +1,17 @@
-﻿<Page x:Class="View.DeleteBoatPage"
+﻿<Page
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:View"
+      xmlns:Viewmodel="clr-namespace:Viewmodel;assembly=Viewmodel" x:Class="View.DeleteBoatPage"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="DeleteBoatPage">
+
+    <Page.DataContext>
+        <Viewmodel:BoatViewmodel/>
+    </Page.DataContext>
 
     <Grid>
         <Grid>
@@ -22,14 +27,8 @@
                 <RowDefinition Height="30*"/>
                 <RowDefinition Height="10*"/>
             </Grid.RowDefinitions>
-            <Button x:Name="button" Content="Verwijder" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="3" VerticalAlignment="Center" FontSize="20" Grid.Column="1"/>
-            <ListView x:Name="listView" Grid.Column="1" Margin="0,0,0,0" Grid.Row="1">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn/>
-                    </GridView>
-                </ListView.View>
-            </ListView>
+            <Button x:Name="Delete_Boat_Button" Content="Verwijder" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="3" VerticalAlignment="Center" FontSize="20" Grid.Column="1" Click="Delete_Boat_Button_Click"/>
+            <DataGrid x:Name="dataGrid" Grid.Column="1" Grid.Row="1" IsSynchronizedWithCurrentItem="False" ItemsSource="{Binding BoatList}" ColumnWidth="*"/>
         </Grid>
 
     </Grid>
