--- a/Roeivereniging/View/Admin/AddMemberPage.xaml
+++ b/Roeivereniging/View/Admin/AddMemberPage.xaml
@@ -38,6 +38,7 @@
             <TextBox x:Name="tbEMail" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="6" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" FontSize="18"/>
             <Button x:Name="Add_Member_Button" Content="Toevoegen" Grid.Column="0" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="8" VerticalAlignment="Center" Grid.ColumnSpan="2" FontSize="24" Click="Add_Member_Button_Click"/>
             <DatePicker x:Name="dpBirthDay" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="7" VerticalAlignment="Center" FontSize="18"/>
+            <Label x:Name="Notification" Content="Lid Toegevoegd" HorizontalAlignment="Center" Grid.Row="9" VerticalAlignment="Center" Grid.ColumnSpan="2" FontSize="14" Visibility="Hidden" Foreground="#FF0DEC17"/>
         </Grid>
 
     </Grid>
