--- a/Roeivereniging/View/Admin/AddBoatPage.xaml
+++ b/Roeivereniging/View/Admin/AddBoatPage.xaml
@@ -26,29 +26,29 @@
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
-            <Label x:Name="label" Content="Naam" Grid.Column="0" HorizontalAlignment="Right" Margin="0,0,5,0" Grid.Row="3" VerticalAlignment="Center" FontSize="18"/>
-            <Label x:Name="label1" Content="Type" Grid.Column="0" HorizontalAlignment="Right" Margin="0,0,5,0" Grid.Row="4" VerticalAlignment="Center" FontSize="18"/>
-            <Label x:Name="label2" Content="Aantal personen" Grid.Column="0" HorizontalAlignment="Right" Margin="0,0,5,0" Grid.Row="5" VerticalAlignment="Center" FontSize="18"/>
-            <Label x:Name="label3" Content="Aantal Riemen" Grid.Column="0" HorizontalAlignment="Right" Margin="0,0,5,0" Grid.Row="6" VerticalAlignment="Center" FontSize="18"/>
-            <Label x:Name="label4" Content="Stuur" Grid.Column="0" HorizontalAlignment="Right" Margin="0,0,5,0" Grid.Row="7" VerticalAlignment="Center" FontSize="18"/>
-            <Label x:Name="label5" Content="Boot Toevoegen" Grid.Column="0" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" FontSize="24" Grid.ColumnSpan="2"/>
-            <TextBox x:Name="tbName" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="3" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" FontSize="18"/>
-            <TextBox x:Name="tbCapacity" PreviewTextInput="PreviewTextInput" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" FontSize="18"/>
-            <Button x:Name="Add_Boat_Button" Content="Toevoegen" Grid.Column="0" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="8" VerticalAlignment="Center" Grid.ColumnSpan="2" FontSize="24" Click="Add_Boat_Button_Click"/>
-            <ComboBox x:Name="cbSculling" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="6" VerticalAlignment="Center" Width="120" FontSize="18">
+            <Rectangle Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" Grid.RowSpan="10" Grid.ColumnSpan="2">
+                <Rectangle.Effect>
+                    <DropShadowEffect BlurRadius="30" Color="#000000" ShadowDepth="0" Opacity="0.3"/>
+                </Rectangle.Effect>
+            </Rectangle>
+            <Label x:Name="label5" Content="Boot Toevoegen" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" Grid.ColumnSpan="2" Margin="0,0,0,0"/>
+            <Button x:Name="Add_Boat_Button" Content="Toevoegen" Grid.Column="0" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="8" VerticalAlignment="Center" Grid.ColumnSpan="2" FontSize="24"/>
+            <ComboBox x:Name="cbSculling" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="5" VerticalAlignment="Center" Width="400" FontSize="18" Grid.ColumnSpan="2" Height="30">
                 <ComboBoxItem Content="Scullen"/>
                 <ComboBoxItem Content="Boord roeien"/>
             </ComboBox>
-            <ComboBox x:Name="cbSteering" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="7" VerticalAlignment="Center" Width="120" FontSize="18">
+            <ComboBox x:Name="cbSteering" HorizontalAlignment="Center" Margin="5,0,0,0" Grid.Row="6" VerticalAlignment="Center" Width="400" FontSize="18" Height="30" Grid.ColumnSpan="2">
                 <ComboBoxItem Content="Ja"/>
                 <ComboBoxItem Content="Nee"/>
             </ComboBox>
-            <ComboBox x:Name="cbType" Grid.Column="1" HorizontalAlignment="Left" Margin="5,0,0,0" Grid.Row="4" VerticalAlignment="Center" Width="120" FontSize="18">
+            <ComboBox x:Name="cbType" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="3" VerticalAlignment="Center" Width="400" FontSize="18" Height="30" Grid.ColumnSpan="2">
                 <ComboBoxItem Content="A-Boot"/>
                 <ComboBoxItem Content="B-Boot"/>
                 <ComboBoxItem Content="C-Boot"/>
                 <ComboBoxItem Content="Wherry"/>
             </ComboBox>
+            <local:TextboxWithPlaceholder HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="2" VerticalAlignment="Center" Grid.ColumnSpan="2" Width="400" Height="45" FontSize="18" Cursor="" PlaceholderText="Naam"/>
+            <local:TextboxWithPlaceholder HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="4" VerticalAlignment="Center" Grid.ColumnSpan="2" Height="45" Width="400" FontSize="18"/>
         </Grid>
 
     </Grid>
