--- a/Roeivereniging/View/Admin/AdminPage.xaml
+++ b/Roeivereniging/View/Admin/AdminPage.xaml
@@ -16,11 +16,17 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="8*"/>
+            <ColumnDefinition Width="17*"/>
             <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="40*"/>
+            <ColumnDefinition Width="80*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="1" VerticalAlignment="Top" Grid.Row="1">
+        <Rectangle Grid.Column="1" Grid.Row="1" Stroke="#FFF3F3F3" RadiusX="12" RadiusY="12" Fill="White" Margin="5,6,5,6">
+            <Rectangle.Effect>
+                <DropShadowEffect BlurRadius="30" Color="#000000" ShadowDepth="0" Opacity="0.3"/>
+            </Rectangle.Effect>
+        </Rectangle>
+        <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="8,22,8,0" Grid.Row="1">
             <Label x:Name="label" Content="Leden" HorizontalAlignment="Center" FontSize="24"/>
             <Button x:Name="Button_Member_Add" Content="Toevoegen" Click="Button_Member_Add_Click"/>
             <Button Content="Rechten aanpassen" />
@@ -29,6 +35,6 @@
             <Button x:Name="button2" Content="Toevoegen" Click="button2_Click"/>
             <Button x:Name="Button_Boat_Delete" Content="Verwijderen" Click="Button_Boat_Delete_Click"/>
         </StackPanel>
-        <Frame x:Name="AdminFrame" Content="" Grid.Column="3" Grid.RowSpan="3"/>
+        <Frame x:Name="AdminFrame" Content="" Grid.Column="3" Margin="0,0,0,0" Grid.Row="1"/>
     </Grid>
 </Page>
