--- a/Roeivereniging/View/Admin/AddBoatPage.xaml
+++ b/Roeivereniging/View/Admin/AddBoatPage.xaml
@@ -32,23 +32,28 @@
                 </Rectangle.Effect>
             </Rectangle>
             <Label x:Name="label5" Content="Boot Toevoegen" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" Grid.ColumnSpan="2" Margin="0,0,0,0"/>
-            <Button x:Name="Add_Boat_Button" Content="Toevoegen" Grid.Column="0" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="8" VerticalAlignment="Center" Grid.ColumnSpan="2" FontSize="24"/>
-            <ComboBox x:Name="cbSculling" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="5" VerticalAlignment="Center" Width="400" FontSize="18" Grid.ColumnSpan="2" Height="30">
+            <Button x:Name="Add_Boat_Button" Content="Toevoegen" Grid.Column="0" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="8" VerticalAlignment="Center" Grid.ColumnSpan="2" FontSize="24" Click="Add_Boat_Button_Click"/>
+            <ComboBox x:Name="cbSculling" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="4" VerticalAlignment="Center" Width="400" FontSize="18" Grid.ColumnSpan="2" Height="30" SelectedIndex="0">
                 <ComboBoxItem Content="Scullen"/>
                 <ComboBoxItem Content="Boord roeien"/>
             </ComboBox>
-            <ComboBox x:Name="cbSteering" HorizontalAlignment="Center" Margin="5,0,0,0" Grid.Row="6" VerticalAlignment="Center" Width="400" FontSize="18" Height="30" Grid.ColumnSpan="2">
-                <ComboBoxItem Content="Ja"/>
-                <ComboBoxItem Content="Nee"/>
+            <ComboBox x:Name="cbSteering" HorizontalAlignment="Center" Margin="5,0,0,0" Grid.Row="5" VerticalAlignment="Center" Width="400" FontSize="18" Height="30" Grid.ColumnSpan="2" SelectedIndex="1">
+                <ComboBoxItem Content="Stuur"/>
+                <ComboBoxItem Content="Geen stuur"/>
             </ComboBox>
-            <ComboBox x:Name="cbType" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="3" VerticalAlignment="Center" Width="400" FontSize="18" Height="30" Grid.ColumnSpan="2">
+            <ComboBox x:Name="cbType" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="2" VerticalAlignment="Center" Width="400" FontSize="18" Height="30" Grid.ColumnSpan="2" SelectedIndex="0">
                 <ComboBoxItem Content="A-Boot"/>
                 <ComboBoxItem Content="B-Boot"/>
                 <ComboBoxItem Content="C-Boot"/>
                 <ComboBoxItem Content="Wherry"/>
             </ComboBox>
-            <local:TextboxWithPlaceholder HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="2" VerticalAlignment="Center" Grid.ColumnSpan="2" Width="400" Height="45" FontSize="18" Cursor="" PlaceholderText="Naam"/>
-            <local:TextboxWithPlaceholder HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="4" VerticalAlignment="Center" Grid.ColumnSpan="2" Height="45" Width="400" FontSize="18"/>
+            <local:TextboxWithPlaceholder x:Name="tbName" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="2" Width="400" Height="45" FontSize="18" Cursor="" PlaceholderText="Naam"/>
+            <local:TextboxWithPlaceholder x:Name="tbCapacity" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="3" VerticalAlignment="Center" Grid.ColumnSpan="2" Height="45" Width="400" FontSize="18" PlaceholderText="Aantal personen"/>
+            <Label x:Name="label" Content="Opslag locatie:" HorizontalAlignment="Center" Margin="0,0,0,0" Grid.Row="6" VerticalAlignment="Bottom" Grid.ColumnSpan="2" FontSize="18"/>
+            <local:TextboxWithPlaceholder x:Name="tbShed" HorizontalAlignment="Right" Margin="0,0,140,0" Grid.Row="7" VerticalAlignment="Center" PlaceholderText="Loods" FontSize="18" Width="70"/>
+            <local:TextboxWithPlaceholder x:Name="tbRow" HorizontalAlignment="Right" Margin="0,0,30,0" Grid.Row="7" VerticalAlignment="Center" PlaceholderText="Rij" FontSize="18" Width="70"/>
+            <local:TextboxWithPlaceholder x:Name="tbColumn" Grid.Column="1" HorizontalAlignment="Left" Margin="30,0,0,0" Grid.Row="7" VerticalAlignment="Center" PlaceholderText="Kolom" FontSize="18" Width="70"/>
+            <local:TextboxWithPlaceholder x:Name="tbHeight" Grid.Column="1" HorizontalAlignment="Left" Margin="140,0,0,0" Grid.Row="7" VerticalAlignment="Center" HorizontalContentAlignment="Stretch" PlaceholderText="Hoogte" FontSize="18" Width="70"/>
         </Grid>
 
     </Grid>
